# naver_blog_auto_write

./: .env.example  .gitignore  CLAUDE.md  README.md  analyze_blog.py  analyze_editor.py  analyze_iframe.py  blog_iframe.html  blog_page.html  editor_page.html  install_korean_fonts.sh  main.py  nblog  pyproject.toml  requirements.txt  run.sh
.github/: copilot-instructions.md
adapters/browser/: __init__.py  driver_adapter.py
adapters/report/: __init__.py  reporter.py
adapters/secrets/: __init__.py  credential_manager.py
automation/naver_blog/: __init__.py  orchestrator.py
cli/: __init__.py  main.py
core/models/: __init__.py  blog_post.py
core/rendering/: __init__.py  content_renderer.py
core/validation/: __init__.py  json_validator.py
docs/: ARCHITECTURE.md
examples/: README.md  sample_input.json
src/: __init__.py  blog_writer.py  blog_writer_cdp.py  config.py  driver.py  naver_login.py
tests/unit/: test_cli.py  test_models.py  test_reporter.py  test_validation.py
